workspace/log/build_2026-06-03_18-29-10/follower_control/stderr.log
  File "/home/quanmh25/quanmh/diffdrive_aruco_follow/workspace/install/follower_control/lib/python3.12/site-packages/follower_control/leader_control_node.py", line 26
    ('STRAIGHT_2', 10.0 self.linear_speed, 0.0),
                   ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

